@@ -12,18 +12,19 @@ log = logger.Logger("hcli_core")
 class AuthMiddleware:
     def __init__(self):
         self.cm = credential.CredentialManager()
+        self.cfg = config.Config()
 
-        if config.auth:
+        if self.cfg.auth:
             self.cm.parse_credentials()
 
     def process_request(self, req: falcon.Request, resp: falcon.Response):
-        if config.auth:
+        if self.cfg.auth:
             if not self.is_authenticated(req):
                 resp.append_header('WWW-Authenticate', 'Basic realm="default"')
                 raise falcon.HTTPUnauthorized()
 
     def is_authenticated(self, req: falcon.Request) -> bool:
-        if config.auth:
+        if self.cfg.auth:
             authenticated = False
 
             auth_header = req.get_header('Authorization')
