@@ -1,5 +1,5 @@
 [config]
-authenticate = True
+authenticate = False
 
 [default]
 username = admin
