@@ -1,2 +1,3 @@
 __version__ = "2.0.0"
-dependencies = ["falcon==4.0.1"]
+dependencies = ["falcon==4.0.1",
+                "portalocker==2.10.1"]
