@@ -1,1 +1,2 @@
 falcon==4.0.1
+portalocker==2.10.1
